--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,6 @@ require Pod::Executable.execute_command(
 
 platform :ios, '16.0'
 
-# Firebase requires static linkage when using use_frameworks!
 use_frameworks! :linkage => :static
 prepare_react_native_project!
 
@@ -19,15 +18,11 @@ target 'Realmreader' do
     :hermes_enabled => true,
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
-  # Note: No need to manually add 'FirebaseCore' here. 
-  # React Native Autolinking will detect @react-native-firebase/app 
-  # and add it automatically.
 end
 
 post_install do |installer|
-  # This section is critical for RN 0.82 New Architecture
   config = use_native_modules!
+
   react_native_post_install(
     installer,
     config[:reactNativePath],
@@ -36,12 +31,18 @@ post_install do |installer|
 
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      # Only use this if you are on an Intel Mac or having specific simulator issues.
-      # On M1/M2/M3 Macs, exclude arm64 can sometimes cause issues with the New Architecture.
-      # config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
-      
-      # Ensure deployment target matches
+      # iOS deployment target
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+
+      # Force dSYM for Hermes
+      if target.name.downcase.include?("hermes")
+        config.build_settings['DEBUG_INFORMATION_FORMAT'] = 'dwarf-with-dsym'
+        config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+
+        # C++ std::thread fix
+        config.build_settings['CPLUSPLUS_LANGUAGE_STANDARD'] = 'c++14'
+        config.build_settings['CPLUSPLUS_LIBRARY'] = 'libc++'
+      end
     end
   end
 end
