--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-html-to-pdf": "^1.3.0",
     "react-native-localize": "^3.6.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-progress": "^5.0.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
